2003-03-04  David Masterson  <dsm@rawbw.com>

	* records.texi: Removed extra space from Info menu entry
	information.

2003-02-25  David Masterson  <dsm@rawbw.com>

	* Makefile.am: adding comments to explain things

	* records.texi (Top): added a statement on the VERSION of
	records-mode that the documentation applies to for the Info
	version of the documentation.

2003-02-24  David Masterson  <dsm@rawbw.com>

	* FAQ (use): added info. on maintenance.

	* README: mentioned INSTALL-UNIX and reformatted to standard text
	file fill-column size (always fill-paragraph on text files).

	* recordsadmin.in: changing srcdirpath to lispdir as that is where
	the lisp will be installed.

	* records-vars.el.in: moved records-var.el to be a configure file
	so that it will know where records-templ.tex was installed.  Maybe
	it should be configurable?

2003-02-22  David Masterson  <dsm@rawbw.com>

	* records-vars.el: changing some defvars to defcustom and adding
	expand-file-name to all file/directory name variables.

2003-02-21  David Masterson  <dsm@rawbw.com>

	* records-vars.el: adding a defgroup for records and putting the
	group in packages.

	* records.el.in: changing version to @VERSION@ and moving this
	file to records.el.in to work with autoconf.

2003-02-20  David Masterson  <dsm@rawbw.com>

	* Converting to automake/autoconf and using ChangeLog from now
	on.  This file is updated with add-change-log-entry.

================

Version 1.4.9
        * Installation now works for native Windows NT port of xemacs. Look at
          the INSTALL-NT file for more details.
        * Added a mode specific menu that pops up when the right button is
          pressed. This button pops up a link specific menu when the button is
          clicked on a records link.
        * When records are inserted, template code can be added to
          records (by subject). For instance, this allows adding the current
          time when a record is inserted. Uses the tempo lisp package.