@@ -1,3 +1,12 @@
+2003-05-20  David Masterson  <dsm@rawbw.com>
+
+	* Makefile.am (MAILCRYPT): added mailcrypt to distribution (again)
+
+2003-05-19  David Masterson  <dsm@rawbw.com>
+
+	* configure.ac: changing name back to 'records' from 'records.el'
+	to keep in the spirit of the storage on SourceForge.
+
 2003-03-04  David Masterson  <dsm@rawbw.com>
 
 	* records.texi: Removed extra space from Info menu entry
